--- a/www/scss/_contact.scss
+++ b/www/scss/_contact.scss
@@ -58,5 +58,6 @@ section#contact {
 
   .grecaptcha-badge {
     float: left;
+    margin-bottom: 20px;
   }
 }
